--- a/css/user.css
+++ b/css/user.css
@@ -2,6 +2,17 @@ body {
     background-color: #111;
 }
 
+.btn-custom {
+    width: 150px; 
+}
+
+.btn-container {
+    display: flex;
+    justify-content: space-between; 
+    padding: 10px 0;
+}
+
+
 .user-info,
 .user-stats,
 .last-games,
@@ -75,4 +86,26 @@ body {
     height: 495px;
     background-color: #111;
 
+}
+
+#profileImageDropzone {
+    background-color: #333; 
+    border: 2px dashed #555; 
+    color: #fff; 
+    padding: 20px; 
+}
+#profileImageDropzone .dz-message {
+    font-size: 1.2em; 
+}
+#profileImageDropzone .dz-preview .dz-image img {
+    width: 100%; 
+    height: auto;
+}
+.img-thumbnail {
+    width: 160px; 
+    height: 160px; 
+    object-fit: cover; 
+}
+.mr-2 {
+    width: 40px;
 }
