--- a/css/game.css
+++ b/css/game.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     opacity: 1;
     transition: opacity 0.5s;
-    background-image: url('https://picsum.photos/1600/600');
+    background-image: url('../Resources/main.png');
     background-size: cover;
     background-position: center;
 }
@@ -19,6 +19,11 @@
     top: 0;
     left: 0;
 }
+.p-3 {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 35px;
+}
+
 
 #seccion1 {
     display: flex;
@@ -118,7 +123,7 @@
 }
 
 .game-section {
-    min-height: 100vh;
+    min-height: 82vh;
     /* Asegura que la sección tenga al menos la altura de la ventana del navegador */
     display: flex;
     align-items: center;
@@ -170,3 +175,20 @@
         padding: 0 15px;
     }
 }
+
+.image-section {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .image-container {
+    width: 100%; /* Ocupa todo el ancho disponible */
+    height: 400px; /* Altura deseada para las imágenes */
+    overflow: hidden; /* Oculta el contenido que se desborde del contenedor */
+  }
+  
+  .image-container img {
+    width: 100%; /* La imagen ocupa todo el ancho del contenedor */
+    height: 100%; /* La imagen ocupa todo el alto del contenedor */
+    object-fit: cover; /* La imagen se ajusta para cubrir todo el contenedor, manteniendo la relación de aspecto */
+  }
