--- a/css/index.css
+++ b/css/index.css
@@ -91,12 +91,25 @@
     }
 }
 
+@media (max-width: 1150px) {
+    .hero-title {
+        font-size: 70px;
+    }
+}
+@media (max-width: 808px) {
+    .hero-title {
+        font-size: 50px;
+    }
+}
+
+
 #about-game .game-card {
     width: 75%;
     margin: 0 auto;
     border: 5px solid #fff;
     position: relative;
     overflow: hidden;
+    height: 363px;
 }
 
 #about-game .game-img {
@@ -104,6 +117,7 @@
     height: auto;
     display: block;
     border-radius: 0;
+    height: 280px;
 }
 
 #about-game .card-img-overlay {
@@ -116,7 +130,6 @@
     text-align: center;
     transform: translateY(100%);
     transition: transform 0.3s ease;
-    /* Animación suave para el texto */
 }
 
 #about-game .game-card:hover .card-img-overlay {
@@ -276,3 +289,4 @@
         width: 100%;
     }
 }
+
